# llm-finetune-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
src/finetune_eval/: __init__.py  cli.py  config.py  metrics.py  report.py  runner.py
src/finetune_eval/providers/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py
tasks/: extraction.example.yaml
tests/: test_metrics.py
